# C_class_lab02_homework

./: CMakeLists.txt
assert/: 流程图.xsd
ins/: palindrome.h
src/: main.c  palindrome.c
